refactor: sync production code